# diploma_backend

./: .gitignore  Dockerfile  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  database.py  firebase.py  logger.py  security.py
app/modules/auth/: dependecies.py  dependencies.py  models.py  router.py  schemas.py  service.py
app/modules/ingredients/: gemini_client.py  models.py  service.py
app/modules/inventory/: constants.py  models.py  router.py  schemas.py  service.py
app/modules/menu/: models.py  router.py  schemas.py  service.py
app/modules/notifications/: scheduler.py  service.py
app/modules/products/: models.py  off_client.py  router.py  schemas.py  service.py  utils.py
app/modules/recipes/: models.py  router.py  schemas.py  service.py  spoonacular_client.py
app/modules/shopping_list/: models.py  router.py  schemas.py  service.py
app/modules/storage/: constants.py  gemini_client.py  models.py  normalization.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/integration/: test_auth.py  test_inventory.py  test_menu.py  test_notifications.py  test_products.py  test_storage.py
tests/unit/: test_models.py  test_security.py  test_storage_normalization.py
